bynkc/tests/fixtures/negative/105_state_opaque_field/src/demo/vault.bynk
context demo.vault

type Secret = opaque String

type Id = String where Matches("[a-z0-9]{1,8}")

agent Vault {
	key id: Id

	store secret: Cell[Secret]

	on call reveal() -> Effect[Secret] {
		secret
	}
}
